--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,15 @@
 <html>
+    <head>
+        <title>
+            first article
+        </title>
+    </head>
+    <body>
+        <div>
+        <a href='/'>home</a>
+        <hr>
+        <h3>this is first project</h3>
+        <p>create a project create a project create a project create a project create a projectcreate a projectcreate a projectcreate a projectcreate a projectcreate a project create a projectcreate a project create a project create a project</p>
+        </div>
+    </body>
 </html>
