[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,13 +3,23 @@
         <title>
             first article
         </title>
+        <style>
+            .container{
+                color:grey;
+            }
+            h3{
+                text-decoration:underline;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
         <a href='/'>home</a>
         <hr>
         <h3>this is first project</h3>
         <p>create a project create a project create a project create a project create a projectcreate a projectcreate a projectcreate a projectcreate a projectcreate a project create a projectcreate a project create a project create a project</p>
+        </div>
         </div>
     </body>
 </html>
