[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,6 +6,7 @@
         <style>
             .container{
                 color:grey;
+                margin:auto;
             }
             h3{
                 text-decoration:underline;
