--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         <style>
             .container{
                 color:grey;
-                margin:auto;
+                margin-left:60px;
             }
             h3{
                 text-decoration:underline;
