--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,12 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id="main-text">
             Hi! I am blalblblsbl.
         </div>
+        <script>
+            alert("what is this website");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
