[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold" id="main-text">
-            Hi! I am blalblblsbl.
+            Hi! I am sainath.
+            <h4>A new heading</h4>
+            I have made some local changes
         </div>
         <script>
             alert("what is this website");
