[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,14 +8,14 @@
             <img id="madi" src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold" id="main-text">
+        <h3>Personal</h3>
+        <div class="center text-big bold " id="main-text">
             Hi! I am sainath.
+        <h3>Professional</h3>
             <h4>A new heading</h4>
             I have made some local changes
         </div>
-        <script>
-            alert("what is this website");
-        </script>
+        <div class="footer"></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
