--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="https://plus.google.com/u/0/photos/116140416254594269430/albums/profile/6345024191821140818.jpg" class="img-medium"/>
+            <img id="madi" src="https://plus.google.com/u/0/photos/116140416254594269430/albums/profile/6345024191821140818" class="img-medium"/>
         </div>
         <br>
         <h3>Personal</h3>
