[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img id="madi" src="https://plus.google.com/u/0/photos/116140416254594269430/albums/profile/6345024191821140818" class="img-medium"/>
         </div>
@@ -14,6 +15,7 @@
         <h3>Professional</h3>
             <h4>A new heading</h4>
             I have made some local changes
+        </div>
         </div>
         <div class="footer"></div>
         <script type="text/javascript" src="/ui/main.js">
