[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,9 @@
             I have made some local changes
         
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            this button <button id='counter'>click me</button> has been clicked for <span id='count'>0</span>no of times
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
