[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
             this button <button id='counter'>click me</button> has been clicked for <span id='count'>0</span> no of times
         </div>
         <hr>
-        <input type="text" placehoder="name" id="nameinput" />
+        <input type="text" placeholder="name" id="nameinput" />
         <input type="submit" value="Submit" id="submit_name">
         </div>
         <script type="text/javascript" src="/ui/main.js">
