[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,10 @@
         </div>
         <hr>
         <input type="text" placeholder="name" id="nameinput" />
-        <input type="submit" value="Submit" id="submit_name">
+        <input type="submit" value="Submit" id="submit_btn">
+        <ul id="namelist">
+            
+        </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
