[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,8 @@
             this button <button id='counter'>click me</button> has been clicked for <span id='count'>0</span> no of times
         </div>
         <hr>
-        <input type="text" placeholder="name" id="name" />
-        <input type="submit" value="Submit" id="submit_btn">
+        <input type="text" id="name" placeholder="name"/>
+        <input type="submit" value="Submit" id="submit_btn" />
         <ul id="namelist">
             
         </ul>
